# BidCore

bid/adview/: CMakeLists.txt  adview_bid.cpp  adview_bid.h  adview_context.cpp  adview_context.h  main.cpp
bid/autohome/: CMakeLists.txt  autohome_bid.cpp  autohome_bid.h  autohome_context.cpp  autohome_context.h  main.cpp
bid/baidu/: CMakeLists.txt  baidu_bid.cpp  baidu_bid.h  baidu_context.cpp  baidu_context.h  baidu_realtime_bidding.proto  main.cpp
bid/baiduvideos/: CMakeLists.txt  baiduvideos_bid.cpp  baiduvideos_bid.h  baiduvideos_context.cpp  baiduvideos_context.h  main.cpp
bid/gdt/: CMakeLists.txt  gdt_bid.cpp  gdt_bid.h  gdt_context.cpp  gdt_context.h  gdt_rtb.pb.cc  gdt_rtb.pb.h  gdt_rtb.proto  main.cpp
bid/google/: CMakeLists.txt  google_adapter.cpp  google_adapter.h  google_bid.cpp  google_bid.h  google_context.cpp  google_context.h  main.cpp  realtime-bidding.pb.cc  realtime-bidding.pb.h  realtime-bidding.proto
bid/iflytek/: CMakeLists.txt  iflytek_adapter.cpp  iflytek_adapter.h  iflytek_bid.cpp  iflytek_bid.h  iflytek_context.cpp  iflytek_context.h  main.cpp
bid/inmobi/: CMakeLists.txt  inmobi_adapter.cpp  inmobi_adapter.h  inmobi_bid.cpp  inmobi_bid.h  inmobi_context.cpp  inmobi_context.h  main.cpp
bid/letv/: CMakeLists.txt  letv_bid.cpp  letv_bid.h  letv_context.cpp  letv_context.h  main.cpp
bid/momo/: CMakeLists.txt  main.cpp  momo_bid.cpp  momo_bid.h  momo_context.cpp  momo_context.h  (+3 more)
common/: .bidbase.cpp.swp  ad_cache.cpp  ad_cache.h  ad_cache_dump.cpp  ad_control.cpp  ad_control.h  ad_element.cpp  ad_element.h  ad_optimize.cpp  ad_optimize.h  ad_optimize.h.bak  bid_conf.cpp  bid_conf.h  bidbase.cpp  bidbase.h  cscope.in.out  cscope.out  cscope.po.out  errorcode.h  filter_assist.cpp  filter_assist.h  local_log.cpp  local_log.h  req_common.cpp  req_common.h  type.h  util.cpp  util.h
conf/: IP_BLACKLIST  RegionCodeID  advcat_amax.txt  advcat_autohome.txt  advcat_baidu.txt  advcat_gdt.txt  advcat_iflytek.txt  advcat_inmobi.txt  advcat_iqiyi.txt  advcat_letv.txt  advcat_momo.txt  advcat_sohu.txt  advcat_tanx.txt  advid_autohome.txt  advid_gdt.txt  advpricecat_iqiyi.txt  appcat_adview.txt  appcat_adwalker.txt  appcat_amax.txt  appcat_baidu.txt  appcat_gdt.txt  appcat_google.txt  appcat_goyoo.txt  appcat_iflytek.txt  appcat_iqiyi.txt  appcat_lefee.txt  appcat_sohu.txt  appcat_sohu_video.txt  appcat_tanx.txt  appcat_zplay.txt  creative-attributes_google.txt  dsp_adview.conf  dsp_autohome.conf  dsp_baidu.conf  dsp_baiduvideos.conf  dsp_gdt.conf  dsp_google.conf  dsp_iflytek.conf  dsp_inmobi.conf  dsp_momo.conf  (+19 more)
doc/: 竞价引擎代码基本结构.docx  竞价引擎流程图.vsdx
sh/: a.out  buf  compress_code.sh  install.sh  main.c
(+126 files in other folders)
